# Text2SQLAgent

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt  topology_graph.json
agents/: graph.py  state.py
agents/nodes/: intent_align.py  reflection.py  result_summary.py  schema_retriever.py  sql_auditor.py  sql_executor.py  sql_generator.py
api/: main.py
auditor/: chain.py
auditor/interceptors/: base.py  performance.py  permission.py  syntax.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue
knowledge_base/: bm25_indexer.py  ddl_chunker.py  ddl_extractor.py  embedder.py  graph_builder.py  milvus_loader.py  query_rewriter.py  retriever.py
prompts/: intent_align.py  reflection.py  result_summary.py  sql_generator.py
retrieval/: dense.py  rrf.py  sparse.py  topology.py
scripts/: build_knowledge_base.py  evaluate_retrieval.py  evaluate_text2sql.py  generate_eval_dataset.py  mock_database.py  test_online_retrieval.py  test_prompts.py
tests/: retrieval_dataset.json  test_auditor.py  test_prompts.py  text2sql_eval_dataset.json
